@@ -363,7 +363,8 @@ public class SolrXmlConfig {
         case "zkACLProvider":
           builder.setZkACLProviderClass(value);
           break;
-        case "zkCredientialsProvider":
+        case "zkCredientialsProvider": // deprecated
+        case "zkCredentialsProvider":
           builder.setZkCredentialsProviderClass(value);
           break;
         default:
